# OpenGEX

./: .clang-format  .gitignore  CMakeLists.txt  vcpkg.json
Example/: CMakeLists.txt  main.cpp
ExporterBlender/addons/: ExportOpenGEX.py
ExporterBlender/addons/ExportOpenGEX/: __init__.py  blender_manifest.toml
OpenGEX/: CMakeLists.txt  OpenGEX.cpp  OpenGEX.h  TSAlgebra.cpp  TSAlgebra.h  TSBivector3D.cpp  TSBivector3D.h  TSColor.cpp  TSColor.h  TSMath.cpp  TSMath.h  TSMatrix2D.cpp  TSMatrix2D.h  TSMatrix3D.cpp  TSMatrix3D.h  TSMatrix4D.cpp  TSMatrix4D.h  TSQuaternion.cpp  TSQuaternion.h  TSRigid2D.cpp  TSRigid2D.h  TSRigid3D.cpp  TSRigid3D.h  TSVector2D.cpp  TSVector2D.h  TSVector3D.cpp  TSVector3D.h  TSVector4D.cpp  TSVector4D.h
cmake/: OpenGEX_External.cmake
